<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="deleteAllNotes"
        android:title="@string/titleDeleteAllNotes"
        android:summary="@string/summaryDeleteAllNotes"
        android:icon="@android:drawable/ic_delete"
    />
    <CheckBoxPreference
        android:key="autoSaveService"
        android:title="@string/titleAutoSaveService"
        android:summary="@string/summaryAutoSaveService"
        android:icon="@android:drawable/arrow_up_float"  
	/>
    <ListPreference
        android:key="fontSize"
        android:entries="@array/fontSize"
        android:title="@string/titleFontSize"
        android:summary="@string/summaryFontSize"
        android:entryValues="@array/valuesFontSize"
        android:icon="@android:drawable/btn_dialog"
	/>
    <ListPreference
        android:key="fontColor"
        android:title="@string/titleFontColor"
        android:summary="@string/summaryFontColor"
        android:entries="@array/fontColor"
        android:entryValues="@array/valuesFontColor"
        android:icon="@android:drawable/ic_input_get"
	/>
	<ListPreference
        android:key="backgroundColor"
        android:title="@string/titleBackgroundColor"
        android:summary="@string/summaryBackgroundColor"
        android:entries="@array/backgroundColor"
        android:entryValues="@array/valuesBackgroundColor"
        android:icon="@android:drawable/btn_star"
	/>
    <ListPreference
        android:key="fontStyle"
        android:title="@string/titleFontStyle"
        android:summary="@string/summaryFontStyle"
        android:entries="@array/fontStyle"
        android:entryValues="@array/valuesFontStyle"
        android:icon="@android:drawable/ic_dialog_info"
	/>
</PreferenceScreen>