<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:id="@+id/layoutEditNote"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	tools:context=".NoteBookApplication" >
	<!-- Title Edit Note TextView -->
	<TextView 
		android:id="@+id/titleActivity"
		android:text="@string/titleEditNote"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="8dp"
	/>
	<TextView
	    android:id="@+id/editTextCount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:text=""
		android:paddingRight="14dp"
	/>
    <EditText
		android:id="@+id/editTitleNote"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text=""
		android:gravity="top|left"
		android:inputType="text"
		android:hint="@string/titleInput">
	</EditText>
	<EditText
		android:id="@+id/editTxtNote"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:text=""
		android:gravity="top|left"
		android:inputType="text|textMultiLine"
		android:hint="@string/txtInput"
	>
	</EditText>
	<Button
	    android:id="@+id/buttonSave"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/buttonSave"
		android:textSize="20sp"
		android:drawableRight="@android:drawable/ic_menu_save"
	/>
</LinearLayout>