<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutViewNote"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	tools:context=".NoteBookApplication" >
	<!-- Title View Note TextView -->
	<TextView 
	    android:id="@+id/titleActivity"
		android:text="@string/titleViewNote"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="8dp"
	/>
	<TextView
	    android:id="@+id/viewTextCreatedAt"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="right"
		android:paddingRight="14dp"
		android:text=""
		android:textIsSelectable="true"
	/>
	<TextView
	    android:id="@+id/viewTitleNote"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:padding="14dp"
		android:text=""
	/>
	<TextView
		android:id="@+id/viewTextNote"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_width="fill_parent"
		android:paddingLeft="14dp"
		android:text=""
		android:scrollbars = "vertical"
	/>
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	<Button
		android:id="@+id/btnPublish"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/buttonPublish"
		android:textSize="20sp"
		android:drawableRight="@android:drawable/ic_menu_share"
	/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	<Button
		android:id="@+id/btnEdit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:text="@string/buttonEdit"
		android:textSize="20sp"
		android:drawableRight="@android:drawable/ic_menu_edit"
	/>
	<Button
		android:id="@+id/btnDelete"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:text="@string/buttonDelete"
		android:textSize="20sp"
		android:drawableRight="@android:drawable/ic_menu_delete"
	/>
	</LinearLayout>
	</LinearLayout>
</LinearLayout>