<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutViewDraft"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	tools:context=".NoteBookApplication" >
	<!-- Title View Note TextView -->
	<TextView 
	    android:id="@+id/titleActivity"
		android:text="@string/titleDraftsView"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="8dp"
	/>
	<TextView
	    android:id="@+id/viewDraftCreatedAt"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="right"
		android:paddingRight="14dp"
		android:text=""
	/>
	<TextView
	    android:id="@+id/viewTitleDraft"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:padding="14dp"
		android:text=""
	/>
	<TextView
		android:id="@+id/viewTextDraft"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_width="fill_parent"
		android:padding="14dp"
		android:text=""
		android:scrollbars = "vertical"
		android:textIsSelectable="true"
	/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	<Button
	    android:id="@+id/btnDeleteDraft"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:text="@string/buttonDelete"
		android:textSize="20sp"
		android:drawableRight="@android:drawable/ic_menu_delete"
	/>
	<Button
		android:id="@+id/btnSaveDraft"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:text="@string/buttonSave"
		android:textSize="20sp"
		android:drawableRight="@android:drawable/ic_menu_save"
	/>
	</LinearLayout>
</LinearLayout>